InterpretationMachination.PascalInterpreter/SimplePascalGrammar.txt
program					: PROGRAM variable SEMCOL block DOT
block					: declarations compound-statement
declarations			: VAR (variable-declaration SEMCOL)+ (procedure-declarations | function-declaration)*
						| empty
procedure-declarations	: PROCEDURE variable (PARL variable-declaration (SEMCOL variable-declaration)* PARR)? SEMCOL block SEMCOL
function-declaration	: FUNCTION variable (PARL variable-declaration (SEMCOL variable-declaration)* PARR)? COLON type-spec SEMCOL block SEMCOL
variable-declaration	: ID (COMMA ID)* COLON type-spec
type-spec				: TYPEINTEGER
						| TYPEREAL 
						| TYPESTRING
						| ARRAY BRL array-index-type BRR OF type-spec
array-index-type		: CONSTINTEGER DOUBLEDOT CONSTINTEGER
						| TYPEINTEGER
						| TYPEREAL 
						| TYPESTRING
compound-statement		: BEGIN statement-list END
statement-list			: statement 
						| statement SEMCOL statement-list
statement				: compound-statement 
						| assignment-statement
						| procedure-call
						| empty
						| if-statement
						| while-loop
if-statement			: IF PARL expr PARR statement (ELSE statement)?
assignment-statement	: variable ASSIGN expr
variable				: ID
empty					: 
procedure-call			: variable PARL (expr (COMMA expr)*)? PARR
function-call			: variable PARL (expr (COMMA expr)*)? PARR
while-loop				: WHILE expr DO statement
index					: variable BRL expr BRR
expr					: add-sub((EQUALS|GT|LT)add-sub)*
add-sub					: term((ADD|SUB)term)*
term					: factor((MUL|DIV|INTDIV)factor)*
factor					: ADD factor
						| SUB factor
						| CONSTINTEGER
						| CONSTREAL
						| TRUE
						| FALSE
						| PARL expr PARR
						| variable
						| function-call
						| index
						| string-literal
string-literal			: CONSTSTRING
						| HASHTAG CONSTINTEGER

DOT				: "."
SEMCOL			: ";"
ASSIGN			: ":="
ID				: [a-zA-Z]+
CONSTINTEGER	: [0-9]+
CONSTREAL		: [0-9]+
CONSTSTRING		: "'...'"
ADD				: "+"
SUB				: "-"
MUL				: "*"
DIV				: "/"
PARL			: "("
PARR			: ")"
COLON			: ":"
EQUALS			: "="
BRL				: "["
BRR				: "]"
GT				: ">"
LT				: "<"
HASHTAG			: "#"
DOUBLEDOT		: ".."
BEGIN			: "BEGIN"
END				: "END"
TYPEINTEGER		: "INTEGER"
TYPEREAL		: "REAL"
TYPESTRING		: "STRING"
TYPEBOOLEAN		: "BOOLEAN"
INTDIV			: "DIV"
PROGRAM			: "PROGRAM"
PROCEDURE		: "PROCEDURE"
FUNCTION		: "FUNCTION"
IF				: "IF"
THEN			: "THEN"
ELSE			: "ELSE"
TRUE			: "TRUE"
FALSE			: "FALSE"
WHILE			: "WHILE"
DO				: "DO"
ARRAY			: "ARRAY"
OF				: "OF"
